--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>An Analog Clock</title>
         <link rel="stylesheet" href="style.css" type="text/css" media="all" />
-        <script src="script.js" defer></script>
     </head>
 
     <body>
@@ -42,5 +41,6 @@
             </div>
             <!-- .clockbox -->
         </main>
+        <script src="script.js"></script>
     </body>
 </html>
