--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>An Analog Clock</title>
         <link rel="stylesheet" href="style.css" type="text/css" media="all" />
+        <link
+            rel="shortcut icon"
+            href="https://img.icons8.com/officel/16/000000/clock.png"
+            type="image/x-icon"
+        />
     </head>
 
     <body>
